Bug 328476 - Fails to compile when QGPGME is missing (KWalletWizardPagePasswordGpg not declared)
Summary: Fails to compile when QGPGME is missing (KWalletWizardPagePasswordGpg not dec...
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
: 328990 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-06 09:43 UTC by Kevin Funk
Modified: 2014-01-21 08:45 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments
Fix bulid without qgpgme (2.37 KB, patch)
2013-12-23 20:23 UTC, David E. Narvaez
Details
fix headers includes without gpgme++ (1.07 KB, patch)
2014-01-08 11:58 UTC, wojtek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2013-12-06 09:43:56 UTC
[59/1218] Building CXX object kwalletd/tests/CMakeFiles/kwalletwizardtest.dir/__/kwalletwizard.o
FAILED: /usr/lib/ccache/c++   -DKDE4_CMAKE_TOPLEVEL_DIR_LENGTH=19 -DKDE_DEFAULT_DEBUG_AREA=285 -DKDE_DEPRECATED_WARNINGS -DQT_NO_CAST_TO_ASCII -DQT_NO_STL -DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -D_BSD_SOURCE -D_REENTRANT -D_XOPEN_SOURCE=500 -Wnon-virtual-dtor -Wno-long-long -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -Werror=return-type -fvisibility-inlines-hidden -g -O2 -fno-reorder-blocks -fno-schedule-insns -fno-inline -Ikwalletd/tests -I/home/krf/devel/src/kde-runtime/kwalletd/tests -I/home/krf/devel/src/kde-runtime -I. -I/home/krf/devel/src/kde-runtime/kwalletd/backend -I/home/krf/devel/src/kde-runtime/kwalletd/tests/.. -I/home/krf/devel/install/master/include -I/home/krf/devel/install/master/include/KDE -I/home/krf/devel/build/qt4.8-shared-debug/include/KDE -I/home/krf/devel/build/qt4.8-shared-debug/include -I/home/krf/devel/build/qt4.8-shared-debug/include/QtXmlPatterns -I/home/krf/devel/build/qt4.8-shared-debug/include/QtXml -I/home/krf/devel/build/qt4.8-shared-debug/include/QtWebKit -I/home/krf/devel/build/qt4.8-shared-debug/include/QtUiTools -I/home/krf/devel/build/qt4.8-shared-debug/include/QtTest -I/home/krf/devel/build/qt4.8-shared-debug/include/QtSvg -I/home/krf/devel/build/qt4.8-shared-debug/include/QtSql -I/home/krf/devel/build/qt4.8-shared-debug/include/QtScriptTools -I/home/krf/devel/build/qt4.8-shared-debug/include/QtScript -I/home/krf/devel/build/qt4.8-shared-debug/include/QtOpenGL -I/home/krf/devel/build/qt4.8-shared-debug/include/QtNetwork -I/home/krf/devel/build/qt4.8-shared-debug/include/QtMultimedia -I/home/krf/devel/build/qt4.8-shared-debug/include/QtHelp -I/home/krf/devel/build/qt4.8-shared-debug/include/QtDesigner -I/home/krf/devel/build/qt4.8-shared-debug/include/QtDeclarative -I/home/krf/devel/build/qt4.8-shared-debug/include/QtDBus -I/home/krf/devel/build/qt4.8-shared-debug/include/Qt3Support -I/home/krf/devel/build/qt4.8-shared-debug/include/QtGui -I/home/krf/devel/build/qt4.8-shared-debug/include/QtCore -I/home/krf/devel/build/qt4.8-shared-debug/include/Qt -I/home/krf/devel/build/qt4.8-shared-debug/mkspecs/default    -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -DKDESRCDIR="\"/home/krf/devel/src/kde-runtime/kwalletd/tests/\"" -MMD -MT kwalletd/tests/CMakeFiles/kwalletwizardtest.dir/__/kwalletwizard.o -MF "kwalletd/tests/CMakeFiles/kwalletwizardtest.dir/__/kwalletwizard.o.d" -o kwalletd/tests/CMakeFiles/kwalletwizardtest.dir/__/kwalletwizard.o -c /home/krf/devel/src/kde-runtime/kwalletd/kwalletwizard.cpp
/home/krf/devel/src/kde-runtime/kwalletd/kwalletwizard.cpp:123:5: error: 'KWalletWizardPagePasswordGpg' in namespace 'Ui' does not name a type
/home/krf/devel/src/kde-runtime/kwalletd/kwalletwizard.cpp: In constructor 'PagePassword::PagePassword(QWidget*)':
/home/krf/devel/src/kde-runtime/kwalletd/kwalletwizard.cpp:83:9: error: 'ui' was not declared in this scope
/home/krf/devel/src/kde-runtime/kwalletd/kwalletwizard.cpp: In member function 'void PagePassword::setMatchLabelText(const QString&)':
/home/krf/devel/src/kde-runtime/kwalletd/kwalletwizard.cpp:119:9: error: 'ui' was not declared in this scope

Reproducible: Always
Comment 1 Johannes Huber 2013-12-19 06:51:16 UTC
*** Bug 328990 has been marked as a duplicate of this bug. ***
Comment 2 Valentin Rusu 2013-12-22 20:06:47 UTC
Git commit 47f54d65518cfcda5e4f9afc9c3ff941209b4920 by Valentin Rusu.
Committed on 22/12/2013 at 19:58.
Pushed by vrusu into branch 'KDE/4.12'.

Fix compile when QGpgme is not present
FIXED-IN: 4.12.1

M  +4    -0    kwalletd/kwalletd.cpp
M  +4    -0    kwalletd/kwalletwizard.cpp

http://commits.kde.org/kde-runtime/47f54d65518cfcda5e4f9afc9c3ff941209b4920
Comment 3 Valentin Rusu 2013-12-22 20:07:18 UTC
Git commit 988b34c558beb783d17e1be6bf4e115b22133bdb by Valentin Rusu.
Committed on 22/12/2013 at 19:58.
Pushed by vrusu into branch 'master'.

Fix compile when QGpgme is not present
FIXED-IN: 4.12.1

M  +4    -0    kwalletd/kwalletd.cpp
M  +4    -0    kwalletd/kwalletwizard.cpp

http://commits.kde.org/kde-runtime/988b34c558beb783d17e1be6bf4e115b22133bdb
Comment 4 wojtek 2013-12-23 12:03:05 UTC
Still fails on my system.


[ 29%] Building CXX object kwalletd/backend/CMakeFiles/kwalletbackend.dir/kwalletbackend.o
cd /tmp/portage_build/portage/kde-base/kwalletd-4.12.0/work/kwalletd-4.12.0_build/kwalletd/backend && /usr/bin/x86_64-pc-linux-gnu-g++  -DKDE4_CMAKE_TOPLEVEL_DIR_LENGTH=56 -DKDE_DEPRECATED_WARNINGS -DMAKE_KWALLETBACKEND_LIB -DQT_NO_CAST_TO_ASCII -DQT_NO_STL -DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -D_BSD_SOURCE -D_REENTRANT -D_XOPEN_SOURCE=500  -DQT_NO_DEBUG -DNDEBUG -O2 -march=amdfam10 -pipe -fno-ident  -Wnon-virtual-dtor -Wno-long-long -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -fvisibility-inlines-hidden -fPIC -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.0/work/kwalletd-4.12.0_build/kwalletd/backend -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.0/work/kwalletd-4.12.0/kwalletd/backend -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.0/work/kwalletd-4.12.0 -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.0/work/kwalletd-4.12.0_build -I/usr/include/KDE -I/usr/include/qt4/QtXmlPatterns -I/usr/include/qt4/QtXml -I/usr/include/qt4/QtWebKit -I/usr/include/qt4/QtUiTools -I/usr/include/qt4/QtTest -I/usr/include/qt4/QtSvg -I/usr/include/qt4/QtSql -I/usr/include/qt4/QtScriptTools -I/usr/include/qt4/QtScript -I/usr/include/qt4/QtOpenGL -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtDesigner -I/usr/include/qt4/QtDeclarative -I/usr/include/qt4/QtDBus -I/usr/include/qt4/Qt3Support -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/Qt -I/usr/share/qt4/mkspecs/default -I/usr/include/qt4    -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -o CMakeFiles/kwalletbackend.dir/kwalletbackend.o -c /tmp/portage_build/portage/kde-base/kwalletd-4.12.0/work/kwalletd-4.12.0/kwalletd/backend/kwalletbackend.cc
/tmp/portage_build/portage/kde-base/kwalletd-4.12.0/work/kwalletd-4.12.0/kwalletd/backend/kwalletbackend.cc:31:25: fatal error: gpgme++/key.h: No such file or directory
 #include <gpgme++/key.h>
                         ^
compilation terminated.
Comment 5 David E. Narvaez 2013-12-23 20:23:33 UTC
Created attachment 84249 [details]
Fix bulid without qgpgme

Can the people still finding fails test this patch? I had this on the Reviewboard and discarded it blindly thinking the bug had been solved, but apparently not.
Comment 6 Valentin Rusu 2013-12-23 20:49:41 UTC
Git commit 4423528b0c8303e0d664d72a6f12b79cb4bfdf8c by Valentin Rusu.
Committed on 23/12/2013 at 20:48.
Pushed by vrusu into branch 'master'.

Further fix compilation without GPGME
FIXED-IN: 4.12.1

M  +2    -0    kwalletd/backend/kwalletbackend.cc

http://commits.kde.org/kde-runtime/4423528b0c8303e0d664d72a6f12b79cb4bfdf8c
Comment 7 Valentin Rusu 2013-12-23 20:50:12 UTC
Git commit 4e22366d7061cf96c7405178f79099721eac9099 by Valentin Rusu.
Committed on 23/12/2013 at 20:48.
Pushed by vrusu into branch 'KDE/4.12'.

Further fix compilation without GPGME
FIXED-IN: 4.12.1

M  +2    -0    kwalletd/backend/kwalletbackend.cc

http://commits.kde.org/kde-runtime/4e22366d7061cf96c7405178f79099721eac9099
Comment 8 Valentin Rusu 2013-12-23 20:51:57 UTC
(In reply to comment #5)
> Created attachment 84249 [details]
> Fix bulid without qgpgme
> 
> Can the people still finding fails test this patch? I had this on the
> Reviewboard and discarded it blindly thinking the bug had been solved, but
> apparently not.

Yeah, you got it right ;-)
(In reply to comment #5)
> Created attachment 84249 [details]
> Fix bulid without qgpgme
> 
> Can the people still finding fails test this patch? I had this on the
> Reviewboard and discarded it blindly thinking the bug had been solved, but
> apparently not.

Yeah, you got it right, as I can see ;-) Better had seen this before, I would have done only one commit :)
Comment 9 wojtek 2013-12-23 20:57:44 UTC
Valentin you forgot change #ifdef kwalletwizard.h and kwalletwizard.h
Comment 10 wojtek 2014-01-08 11:58:13 UTC
Created attachment 84512 [details]
fix headers includes without gpgme++

This finally fixes my build without gpgme++.
Comment 11 Alexey Kharlamov 2014-01-20 08:21:05 UTC
Still present in kde 4.12.1 because includes are not ifdefed

In file included from /var/tmp/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1/kwalletd/kwalletwizard.cpp:19:0:
/var/tmp/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1/kwalletd/kwalletwizard.h:23:25: fatal error: gpgme++/key.h: No such file or directory
 #include <gpgme++/key.h>
                         ^
compilation terminated.
kwalletd/CMakeFiles/kdeinit_kwalletd.dir/build.make:186: recipe for target 'kwalletd/CMakeFiles/kdeinit_kwalletd.dir/kwalletwizard.o' failed
make[2]: *** [kwalletd/CMakeFiles/kdeinit_kwalletd.dir/kwalletwizard.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /var/tmp/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1/kwalletd/kwalletd.cpp:28:0:
/var/tmp/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1/kwalletd/kwalletwizard.h:23:25: fatal error: gpgme++/key.h: No such file or directory
 #include <gpgme++/key.h>
                         ^
Comment 12 Valentin Rusu 2014-01-20 21:39:26 UTC
Git commit 3ecfd295947fce6c2009ca23e626887bafece1ea by Valentin Rusu.
Committed on 20/01/2014 at 21:37.
Pushed by vrusu into branch 'master'.

Fix compilation withoug gpgme
FIXED-IN: 4.12.2
FIXED-IN: 4.13

M  +2    -0    kwalletd/kwalletwizard.h

http://commits.kde.org/kde-runtime/3ecfd295947fce6c2009ca23e626887bafece1ea
Comment 13 Valentin Rusu 2014-01-20 21:40:16 UTC
Git commit 3cb6fd6ca583be37c7052e7d4c867ff3d15da3bd by Valentin Rusu.
Committed on 20/01/2014 at 21:37.
Pushed by vrusu into branch 'KDE/4.12'.

Fix compilation withoug gpgme
FIXED-IN: 4.12.2
FIXED-IN: 4.13

M  +2    -0    kwalletd/kwalletwizard.h

http://commits.kde.org/kde-runtime/3cb6fd6ca583be37c7052e7d4c867ff3d15da3bd
Comment 14 wojtek 2014-01-20 22:01:00 UTC
Valentin you must ifdef kwalletd.cpp too because build still fails

Building CXX object kwalletd/CMakeFiles/kdeinit_kwalletd.dir/kwalletadaptor.o
cd /tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1_build/kwalletd && /usr/bin/x86_64-pc-linux-gnu-g++  -DKDE4_CMAKE_TOPLEVEL_DIR_LENGTH=56 -DKDE_DEFAULT_DEBUG_AREA=285 -DKDE_DEPRECATED_WARNINGS -DQT_NO_CAST_TO_ASCII -DQT_NO_STL -DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -D_BSD_SOURCE -D_REENTRANT -D_XOPEN_SOURCE=500 -Dkdeinit_kwalletd_EXPORTS  -DQT_NO_DEBUG -DNDEBUG -O2 -march=corei7-avx -pipe -fno-ident  -Wnon-virtual-dtor -Wno-long-long -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -fvisibility-inlines-hidden -fPIC -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1_build/kwalletd -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1/kwalletd -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1 -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1_build -I/tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1/kwalletd/backend -I/usr/include/KDE -I/usr/include/qt4/QtXmlPatterns -I/usr/include/qt4/QtXml -I/usr/include/qt4/QtWebKit -I/usr/include/qt4/QtUiTools -I/usr/include/qt4/QtTest -I/usr/include/qt4/QtSvg -I/usr/include/qt4/QtSql -I/usr/include/qt4/QtScriptTools -I/usr/include/qt4/QtScript -I/usr/include/qt4/QtOpenGL -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtDesigner -I/usr/include/qt4/QtDeclarative -I/usr/include/qt4/QtDBus -I/usr/include/qt4/Qt3Support -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/Qt -I/usr/share/qt4/mkspecs/default -I/usr/include/qt4    -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -o CMakeFiles/kdeinit_kwalletd.dir/kwalletadaptor.o -c /tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1_build/kwalletd/kwalletadaptor.cpp
/tmp/portage_build/portage/kde-base/kwalletd-4.12.1/work/kwalletd-4.12.1/kwalletd/kwalletd.cpp:52:25: fatal error: gpgme++/key.h: No such file or directory
 #include <gpgme++/key.h>
                         ^
compilation terminated.
Comment 15 Valentin Rusu 2014-01-20 22:49:14 UTC
Git commit ab50cbc858e6e599673d9b0f39a677d2af8f0ba0 by Valentin Rusu.
Committed on 20/01/2014 at 22:48.
Pushed by vrusu into branch 'KDE/4.12'.

Fix compilation without gpgme++

M  +2    -0    kwalletd/kwalletd.cpp

http://commits.kde.org/kde-runtime/ab50cbc858e6e599673d9b0f39a677d2af8f0ba0
Comment 16 Valentin Rusu 2014-01-20 22:49:45 UTC
Git commit 6a79fc09c0b0d48bd0cc09d32fb0c8b306251c00 by Valentin Rusu.
Committed on 20/01/2014 at 22:48.
Pushed by vrusu into branch 'master'.

Fix compilation without gpgme++

M  +2    -0    kwalletd/kwalletd.cpp

http://commits.kde.org/kde-runtime/6a79fc09c0b0d48bd0cc09d32fb0c8b306251c00