Fix compile when QGpgme is not present

BUG: 328476
FIXED-IN: 4.12.1