kwalletd.cpp
@@ -833,11 +833,13 @@ void KWalletD::doTransactionChangePassword(const QString& appid, const QString& 
 
 	assert(w);
 
+#ifdef HAVE_QGPGME
     if (w->cipherType() == KWallet::BACKEND_CIPHER_GPG) {
         QString keyID = w->gpgKey().shortKeyID();
         assert(!keyID.isNull());
         KMessageBox::errorWId((WId)wId, i18n("<qt>The <b>%1</b> wallet is encrypted using GPG key <b>%2</b>. Please use <b>GPG</b> tools (such as <b>kleopatra</b>) to change the passphrase associated to that key.</qt>", Qt::escape(wallet), keyID));
     } else {
+#endif
         QPointer<KNewPasswordDialog> kpd = new KNewPasswordDialog();
         kpd->setPrompt(i18n("<qt>Please choose a new password for the wallet '<b>%1</b>'.</qt>", Qt::escape(wallet)));
         kpd->setCaption(i18n("KDE Wallet Service"));
@@ -862,7 +864,9 @@ void KWalletD::doTransactionChangePassword(const QString& appid, const QString& 
         }
 
         delete kpd;
+#ifdef HAVE_QGPGME
     }
+#endif
 
 	if (reclose) {
 		internalClose(w, handle, true);
